feat: add interface `ImageNameList`
